# slimconvert

./: README.md  dockerfile  pyproject.toml  req.txt
slimconvert/: server.py
tests/: test_server.py
